# SMART_VIO_Workflow

./: README.md
src/IMU_CAMERA_Hardware_Sync/: package.xml  setup.cfg  setup.py
src/IMU_CAMERA_Hardware_Sync/IMU_CAMERA_Hardware_Sync/: img_imu_data_pb2.py  imu_data_pb2.py  imu_serial_node.py
src/IMU_Reader/: IMU_Reader.ino  img_imu_data.pb.c  img_imu_data.pb.h
src/IMU_Reader/protobuf/: img_imu_data.proto  imu_data.pb.c  imu_data.pb.h  imu_data.proto
src/zed_sub/: CMakeLists.txt  package.xml
src/zed_sub/data/: IMG_output.txt
src/zed_sub/src/: ROS2_IMU_OpticalFlow_Node.cpp
src/zed_sub/zed_sub/: visualization.py
